--- a/index.html
+++ b/index.html
@@ -35,12 +35,53 @@
 
     <nav>
        	<ul>
-       		<li><a href="#">CONTACTO</a></li>
-       		<li><a href="#">SERVICIOS</a></li>
-       		<li><a href="#">PRODUCTOS</a></li>
        		<li><a href="#">EMPRESA</a></li>
+       		<li><a href="#">PRODUCTOS</a>
+       		<!-- Submenu Productos -->
+		   		<ul>
+					<li class="boton_as"><a href="#">Impresos</a></li>
+					<li class="boton_as"><a href="#">Plotter de corte</a></li>
+					<li class="boton_as"><a href="#">Estampados</a></li>
+				</ul>
+       		</li>
+       		<li><a href="#">SERVICIOS</a></li>
+       		<li><a href="#">CONTACTO</a></li>
        	</ul>
     </nav>
+
+<!-- PRUEBA DE MENU DESPLEGLABLE -->
+<!-- PRUEBA DE MENU DESPLEGLABLE -->
+<!-- PRUEBA DE MENU DESPLEGLABLE -->
+	<div id="navi">
+			<ul class="navi">
+				<li><a href="">Inicio</a></li>
+				<li><a href="">Servicios</a>
+					<ul>
+						<li><a href="">Submenu1</a></li>
+						<li><a href="">Submenu2</a></li>
+						<li><a href="">Submenu3</a></li>
+						<li><a href="">Submenu4</a>
+							<ul>
+								<li><a href="">Submenu1</a></li>
+								<li><a href="">Submenu2</a></li>
+								<li><a href="">Submenu3</a></li>
+								<li><a href="">Submenu4</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a href="">Acerca de</a>
+					<ul>
+						<li><a href="">Submenu1</a></li>
+						<li><a href="">Submenu2</a></li>
+						<li><a href="">Submenu3</a></li>
+						<li><a href="">Submenu4</a></li>
+					</ul>
+				</li>
+				<li><a href="">Contacto</a></li>
+			</ul>
+	</div>
+<!-- PRUEBA DE MENU DESPLEGLABLE // FIN // -->
 
 	<section>
 		<h1>Novedades</h1>
@@ -63,8 +104,12 @@
 	</section> 
 
 	<aside>
-		<h2><center>Inicio de aside Falta Ubicar</center></h2>
-		<h3>Publicidad</h3>
+		<h2><center>Destacados</center></h2>
+		<h3>Impresos<br>Tarjetas y Volantes</h3>
+		<h3>Pendones</h3>	
+		<h3>Señalética y rotulación</h3>
+		<h3>Estampados</h3>
+		<h3>Diseño Gráfico</h3>
 	</aside>
 
 	<footer>
