--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <!-- PRUEBA DE MENU DESPLEGLABLE -->
 	<div id="navi">
 			<ul class="navi">
-				<li><a href="">Inicio</a></li>
-				<li><a href="">Servicios</a>
+				<li><a href="">Empresa</a></li>
+				<li><a href="">Productos</a>
 					<ul>
 						<li><a href="">Submenu1</a></li>
 						<li><a href="">Submenu2</a></li>
@@ -70,7 +70,7 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="">Acerca de</a>
+				<li><a href="">Servicios</a>
 					<ul>
 						<li><a href="">Submenu1</a></li>
 						<li><a href="">Submenu2</a></li>
