--- a/index.html
+++ b/index.html
@@ -27,44 +27,60 @@
 					<img src="imagenes/logo_pdc.png" height="75" alt="Projeto Desarrollo Creativo">			
 				</td>
 				<td width="650">
-					<p class="subtitulo_banner">Diseño<br>Impresión<br>Soluciones Gráficas</p>
+					<p class="subtitulo_banner">Diseño G+W<br>Impresi&oacute;n y Estampado<br>Soluciones Gráficas</p>
 				</td>
 			</tr>
 		</table>
 	</header>
 
     <nav>
-       	<ul>
+<!--    <div id="navi"> -->
+       	<ul class="navi">
        		<li><a href="#">EMPRESA</a></li>
        		<li><a href="#">PRODUCTOS</a>
        		<!-- Submenu Productos -->
 		   		<ul>
-					<li class="boton_as"><a href="#">Impresos</a></li>
-					<li class="boton_as"><a href="#">Plotter de corte</a></li>
+					<li><a href="#">Impresos</a>
+					<!--Sub submenu impresos-->
+						<ul>
+							<li><a href="#">Tarjetas presentaci&oacute;n</a></li>
+							<li><a href="#">Volantes</a></li>
+			<!--salto--><br>
+						</ul>
+					</li><!--salto--><br>
+					<li class="boton_as"><a href="#">Plotter de corte</a></li><!--salto--><br>
 					<li class="boton_as"><a href="#">Estampados</a></li>
 				</ul>
        		</li>
-       		<li><a href="#">SERVICIOS</a></li>
+       		<li><a href="">SERVICIOS</a>
+       			<ul>
+       				<li class="boton_as"><a href="#">Diseño Gr&aacute;fico</a></li><!--salto--><br>
+       				<li class="boton_as"><a href="#">Desarrollo Web</a></li><!--salto--><br>
+       				<li class="boton_as"><a href="#">Fotograf&iacute;a</a></li><!--salto--><br>
+       				<li class="boton_as"><a href="#">Edici&oacute;n digital de im&aacute;genes</a></li>
+       			</ul>
+       		</li>
        		<li><a href="#">CONTACTO</a></li>
        	</ul>
+<!--    </div> -->
     </nav>
 
 <!-- PRUEBA DE MENU DESPLEGLABLE -->
 <!-- PRUEBA DE MENU DESPLEGLABLE -->
-<!-- PRUEBA DE MENU DESPLEGLABLE -->
+<!-- CODIGO MENU DESPLEGLABLE
 	<div id="navi">
 			<ul class="navi">
 				<li><a href="">Empresa</a></li>
 				<li><a href="">Productos</a>
 					<ul>
-						<li><a href="">Submenu1</a></li>
-						<li><a href="">Submenu2</a></li>
-						<li><a href="">Submenu3</a></li>
+						<li><a href="">Submenu1</a></li><br>
+						<li><a href="">Submenu2</a></li><br>
+						<li><a href="">Submenu3</a></li><br>
 						<li><a href="">Submenu4</a>
 							<ul>
-								<li><a href="">Submenu1</a></li>
-								<li><a href="">Submenu2</a></li>
-								<li><a href="">Submenu3</a></li>
+								<li><a href="">Submenu1</a></li><br>
+								<li><a href="">Submenu2</a></li><br>
+								<li><a href="">Submenu3</a></li><br>
 								<li><a href="">Submenu4</a></li>
 							</ul>
 						</li>
@@ -81,6 +97,7 @@
 				<li><a href="">Contacto</a></li>
 			</ul>
 	</div>
+	 -->
 <!-- PRUEBA DE MENU DESPLEGLABLE // FIN // -->
 
 	<section>
